--- a/project.Rmd
+++ b/project.Rmd
@@ -2,7 +2,9 @@
 title: "Olympic Dataset"
 author: "Peizhi Zhang"
 date: "August 25th, 2018"
-output: rmarkdown::github_document
+output: 
+   html_document:
+    keep_md: true
 ---
 
 
